--- a/Graph_0307.ipynb
+++ b/Graph_0307.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706fe2ad",
+   "id": "20644163",
    "metadata": {},
    "source": [
     "#### 先畫出原本的個人連結圖"
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "52dc0c67",
+   "id": "d50a213d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "90eb34b5",
+   "id": "ca6331fc",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d26b8502",
+   "id": "20a24b2c",
    "metadata": {},
    "source": [
     "#### 畫個對照表的圖"
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "a61e1d7b",
+   "id": "82326f20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "e317000a",
+   "id": "1806a50c",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff679a6",
+   "id": "527b9064",
    "metadata": {},
    "source": [
     "#### Try to 合在一起"
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "0d601004",
+   "id": "5350d577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,8 +615,10 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "5fe98710",
-   "metadata": {},
+   "id": "630f743d",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
