--- a/資料輸入MVP/Data Input MVP_by Gadio.ipynb
+++ b/資料輸入MVP/Data Input MVP_by Gadio.ipynb
@@ -21,7 +21,7 @@
    "id": "b3d8d3c4",
    "metadata": {},
    "source": [
-    "### 用 Gradio 拉介面"
+    "### 先 Define 功能"
    ]
   },
   {
@@ -34,24 +34,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "1a267721",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "import csv\n",
+    "\n",
+    "# 讀csv\n",
+    "def load_csv(file):\n",
+    "    with open('persona.csv', newline='') as csvfile:\n",
+    "        reader = csv.reader(csvfile)\n",
+    "        data = \"\\n\".join([\", \".join(row) for row in reader])\n",
+    "    return data\n",
+    "\n",
+    "# 幫csv加資料\n",
+    "def add_data(name, interest):\n",
+    "    with open('persona.csv', mode='a', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        writer.writerow([name, interest])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8df1add0",
+   "metadata": {},
+   "source": [
+    "### 畫介面"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "35764f9d",
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Irene Chang\\AppData\\Roaming\\Python\\Python39\\site-packages\\gradio\\utils.py:858: UserWarning: Expected 2 arguments for function <function submit_action at 0x0000024D4E8C7310>, received 0.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Irene Chang\\AppData\\Roaming\\Python\\Python39\\site-packages\\gradio\\utils.py:862: UserWarning: Expected at least 2 arguments for function <function submit_action at 0x0000024D4E8C7310>, received 0.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Irene Chang\\AppData\\Roaming\\Python\\Python39\\site-packages\\gradio\\utils.py:858: UserWarning: Expected 1 arguments for function <function load_csv at 0x0000024D4ED6AA60>, received 2.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Irene Chang\\AppData\\Roaming\\Python\\Python39\\site-packages\\gradio\\utils.py:866: UserWarning: Expected maximum 1 arguments for function <function load_csv at 0x0000024D4ED6AA60>, received 2.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -77,49 +95,30 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import gradio as gr\n",
-    "import csv\n",
-    "\n",
-    "# 读取 CSV 文件并显示\n",
-    "def load_csv(file):\n",
-    "    with open('persona.csv', newline='') as csvfile:\n",
-    "        reader = csv.reader(csvfile)\n",
-    "        data = \"\\n\".join([\", \".join(row) for row in reader])\n",
-    "    return data\n",
-    "\n",
-    "# 将新数据添加到 CSV 文件中\n",
-    "def add_data(name, interest):\n",
-    "    with open('persona.csv', mode='a', newline='') as csvfile:\n",
-    "        writer = csv.writer(csvfile)\n",
-    "        writer.writerow([name, interest])\n",
-    "\n",
-    "# 连接界面的 Submit 按钮和函数\n",
-    "def submit_action(inputs, outputs):\n",
-    "    name = inputs[\"Name\"]\n",
-    "    interest = inputs[\"Interest\"]\n",
+    "# Gradio UI 接口\n",
+    "def add_to_csv(name, interest):\n",
     "    add_data(name, interest)\n",
-    "    outputs[\"Result\"] = f\"Data added: {name}, {interest}\"\n",
-    "\n",
-    "\n",
+    "    updated_csv = load_csv('persona.csv')\n",
+    "    return f\"已将 {name} 的兴趣添加到 CSV 文件中。\\n\\n更新后的 CSV 数据为：\\n{updated_csv}\"\n",
     "\n",
     "# 创建 Gradio 界面\n",
-    "with gr.Blocks() as demo:\n",
-    "    Name = gr.Textbox(label=\"Name\", placeholder=\"Enter Your Name\")\n",
-    "    Key = gr.Textbox(label=\"Interest\", placeholder=\"Enter Your Interests\")\n",
-    "    Submit_btn = gr.Button(\"Submit\")\n",
-    "    Submit_btn.click(submit_action, outputs=Result)\n",
-    "    \n",
-    "# 创建 Gradio 界面\n",
-    "app = gr.Interface(fn=load_csv, inputs=[Name, Key], outputs=Result, title=\"CSV Viewer\")\n",
+    "iface = gr.Interface(\n",
+    "    fn=add_to_csv,\n",
+    "    inputs=[\"text\", \"text\"],\n",
+    "    outputs=gr.Dataframe(label=\"CSV内容\"),\n",
+    "    title=\"增加你的資料的csv中!\",\n",
+    "    description=\"左邊填寫完送出，右邊即刻更新\",\n",
+    "    theme=\"default\"\n",
+    ")\n",
     "\n",
     "# 启动 Gradio 界面\n",
-    "app.launch()\n"
+    "iface.launch()"
    ]
   },
   {
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "67144fe4",
    "metadata": {},
    "outputs": [
@@ -140,7 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7867\n",
+      "Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -148,7 +147,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -161,7 +160,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
